Finish the implementation of payroll command