@@ -1,18 +1,25 @@
 package seedu.address.logic.parser;
 
+import static seedu.address.logic.Messages.MESSAGE_INVALID_COMMAND_FORMAT;
+import static seedu.address.logic.parser.CliSyntax.PREFIX_NAME;
+
+import java.util.Arrays;
+
 import seedu.address.commons.core.index.Index;
 import seedu.address.logic.commands.PayrollCommand;
 import seedu.address.logic.parser.exceptions.ParseException;
 import seedu.address.model.person.NameContainsKeywordsPredicate;
 
-import java.util.Arrays;
-import java.util.List;
+/**
+ * Parses input arguments and creates a new PayrollCommand object
+ */
+public class PayrollCommandParser implements Parser<PayrollCommand> {
 
-import static seedu.address.logic.parser.CliSyntax.PREFIX_NAME;
-import static seedu.address.logic.Messages.MESSAGE_INVALID_COMMAND_FORMAT;
-
-public class PayrollCommandParser implements Parser<PayrollCommand>{
-
+    /**
+     * Parses the given {@code String} of arguments in the context of the PayrollCommand
+     * and returns a PayrollCommand object for execution.
+     * @throws ParseException if the user input does not conform the expected format
+     */
     @Override
     public PayrollCommand parse(String args) throws ParseException {
         String trimmedArgs = args.trim();
@@ -30,7 +37,8 @@ public class PayrollCommandParser implements Parser<PayrollCommand>{
 
             if (argMultimap.getValue(PREFIX_NAME).isPresent()) {
                 String name = ParserUtil.parseName(argMultimap.getValue(PREFIX_NAME).get()).toString();
-                return new PayrollCommand(new NameContainsKeywordsPredicate(List.of(name)));
+                String[] nameKeywords = name.split("\\s+");
+                return new PayrollCommand(new NameContainsKeywordsPredicate(Arrays.asList(nameKeywords)));
             } else {
                 throw new ParseException(
                         String.format(MESSAGE_INVALID_COMMAND_FORMAT, PayrollCommand.MESSAGE_USAGE));
